--- a/some_file.html
+++ b/some_file.html
@@ -1,7 +1,11 @@
-<h1>Presentation de mewtwo</h1>
-<p>### - Point d'attaque : 110
- ### - Point de defense : 90
- ### - Point d'attaque special : 154
- ### - Point de defense special : 90
- ### - Point de vitesse : 130
- <img alt="alt text" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/150.png" /></p>
+<h1>Presentation de dragonite</h1>
+<h3>- Point de vitesse : 91</h3>
+<h3>- Point d'attaque : 134</h3>
+<h3>- Point de defense : 95</h3>
+<h3>- Point d'attaque special : 100</h3>
+<h3>- Point de defense special : 100</h3>
+<h3>- Point de vitesse : 80</h3>
+<h3>- Type : flying</h3>
+<h3>- taille : 22</h3>
+<h3>- Poids : 2100</h3>
+<p><img alt="alt text" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/149.png" /></p>
